--- a/style.css
+++ b/style.css
@@ -21,10 +21,13 @@ body{
     }
     
 
- @media only screen and (max-width: 500px)
+ @media only screen and (min-width: 500px)
 .container{ 
     width: 50%;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    
     
 }
 .box-1{
